--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                     <div class="skill">
                         <span>HTML</span>
                         <div class="barra-skill">
-                            <div class="progreso htmlcss">
+                            <div class="progreso html">
                                 <span>80%</span>
                             </div>
                         </div>
@@ -177,7 +177,7 @@
                     <div class="skill">
                         <span>CSS</span>
                         <div class="barra-skill">
-                            <div class="progreso photoshop">
+                            <div class="progreso css">
                                 <span>75%</span>
                             </div>
                         </div>
@@ -185,7 +185,7 @@
                     <div class="skill">
                         <span>GITHUB & GIT</span>
                         <div class="barra-skill">
-                            <div class="progreso wordpress">
+                            <div class="progreso git">
                                 <span>75%</span>
                             </div>
                         </div>
@@ -193,7 +193,7 @@
                     <div class="skill">
                         <span>COREL DRAW</span>
                         <div class="barra-skill">
-                            <div class="progreso dupra">
+                            <div class="progreso corel">
                                 <span>80%</span>
                             </div>
                         </div>
@@ -255,60 +255,60 @@
             <div class="fila">
                 <div class="col izquierda">
                     <h3>Educacion</h3>
-                    <div class="item izq">
-                        <h4>Arte y Multimedia</h4>
-                        <span class="casa">Universidad de Columbia</span>
-                        <span class="fecha">2005 - 2009</span>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil sed unde temporibus, incidunt dolorum commodi praesentium vel atque earum hic id maiores quam aliquam nesciunt consectetur. Soluta, libero? Aliquam, ipsum.</p>
+                    <div class="item izq utic">
+                        <h4>Ing. Sistemas Informaticos</h4>
+                        <span class="casa">Universidad Tenologica Intercontinental UTIC</span>
+                        <span class="fecha">2001 - 2004</span>
+                        <p>Se iniciaron los estiudios y por problemas fuera del alcanse fueron abandonados, quedando ahun asi con los conocimientos de la carrera.</p>
                         <div class="conectori">
                             <div class="circuloi"></div>
                         </div>
                     </div>
-                    <div class="item izq">
-                        <h4>Arte y Multimedia</h4>
-                        <span class="casa">Universidad de Columbia</span>
-                        <span class="fecha">2005 - 2009</span>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil sed unde temporibus, incidunt dolorum commodi praesentium vel atque earum hic id maiores quam aliquam nesciunt consectetur. Soluta, libero? Aliquam, ipsum.</p>
+                    <div class="item izq dr">
+                        <h4>Bachiller Tecnico en Informatica</h4>
+                        <span class="casa">Colegio Nacional EMD Dr. Raul Peña </span>
+                        <span class="fecha">1998 - 2000</span>
+                        <p>Estudios realizados en el colegio tecnico, en la cual me forme como tecnico en computadoras teniendo asi una base para la postulacion a diferentes empleos o por como se dio el montaje del propio negocio de reparacion de computadoras</p>
                         <div class="conectori">
                             <div class="circuloi"></div>
                         </div>
                     </div>
-                    <div class="item izq">
-                        <h4>Arte y Multimedia</h4>
-                        <span class="casa">Universidad de Columbia</span>
-                        <span class="fecha">2005 - 2009</span>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil sed unde temporibus, incidunt dolorum commodi praesentium vel atque earum hic id maiores quam aliquam nesciunt consectetur. Soluta, libero? Aliquam, ipsum.</p>
+                    <div class="item izq dr">
+                        <h4>Bachiller en Ciencias y Letras</h4>
+                        <span class="casa">Colegio Nacional EMD Dr. Raul Peña </span>
+                        <span class="fecha">1996 - 1998</span>
+                        <p>Estudios realizados en el colegio con enfasis en ciencias y letras, lo cual me formo como profesional en el campo de los tratos profesionales y personales abriendome asi un camino para la aspiracion de empleos en ese rubro</p>
                         <div class="conectori">
                             <div class="circuloi"></div>
                         </div>
                     </div>
                 </div>
 
-                <div class="col derecha">
+                <div class="col derecha ">
                     <h3>Experiencia de trabajo</h3>
-                    <div class="item der">
-                        <h4>Arte y Multimedia</h4>
-                        <span class="casa">Universidad de Columbia</span>
-                        <span class="fecha">2005 - 2009</span>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil sed unde temporibus, incidunt dolorum commodi praesentium vel atque earum hic id maiores quam aliquam nesciunt consectetur. Soluta, libero? Aliquam, ipsum.</p>
+                    <div class="item der frontend">
+                        <h4>Desarrollador FrontEnd</h4>
+                        <span class="casa">MANIDELA - Developer</span>
+                        <span class="fecha">2022 - Actualidad</span>
+                        <p>Desarrollando WEB SITE, Porfolios WEB, con la excelencia de un profesional, que nos caracteriza, poniendo a disposicion del cliente todo el conocimiento que adquirimos tanto en lo teorico como en la practica.</p>
                         <div class="conectord">
                             <div class="circulod"></div>
                         </div>
                     </div>
-                    <div class="item der">
-                        <h4>Arte y Multimedia</h4>
-                        <span class="casa">Universidad de Columbia</span>
-                        <span class="fecha">2005 - 2009</span>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil sed unde temporibus, incidunt dolorum commodi praesentium vel atque earum hic id maiores quam aliquam nesciunt consectetur. Soluta, libero? Aliquam, ipsum.</p>
+                    <div class="item der compu">
+                        <h4>Reparacion y Mantenimientos de PC</h4>
+                        <span class="casa">MANIDELA</span>
+                        <span class="fecha">2001 - Actualidad</span>
+                        <p>Dedicandonos al mantenimiento y reparacion de computadoras con una clientela muy satisfecha por el trabajo que realizamos.</p>
                         <div class="conectord">
                             <div class="circulod"></div>
                         </div>
                     </div>
-                    <div class="item der">
-                        <h4>Arte y Multimedia</h4>
-                        <span class="casa">Universidad de Columbia</span>
-                        <span class="fecha">2005 - 2009</span>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil sed unde temporibus, incidunt dolorum commodi praesentium vel atque earum hic id maiores quam aliquam nesciunt consectetur. Soluta, libero? Aliquam, ipsum.</p>
+                    <div class="item der celular">
+                        <h4>Repacion de Celulares</h4>
+                        <span class="casa">MANIDELA</span>
+                        <span class="fecha">2005 - Actualidad</span>
+                        <p>Generada con la demanda y el pedido de los clientes, desidimos abrir el departamento de celulares, tomando con la completa seriedad y profesionalismo el emprendimiento.</p>
                         <div class="conectord">
                             <div class="circulod"></div>
                         </div>
@@ -324,45 +324,45 @@
             <h2>PORFOLIO</h2>
             <div class="galeria">
                 <div class="proyecto">
-                    <img src="img/fullstack.png" alt="">
+                    <img src="img/repacompu.png" alt="">
                     <div class="overlay">
                         <h3>Diseño Creativo</h3>
-                        <p>Fotografía</p>
+                        <p>MANIDELA</p>
                     </div>
                 </div>
                 <div class="proyecto">
                     <img src="img/fullstack.png" alt="">
                     <div class="overlay">
                         <h3>Diseño Creativo</h3>
-                        <p>Fotografía</p>
+                        <p>MANIDELA</p>
                     </div>
                 </div>
                 <div class="proyecto">
-                    <img src="img/fullstack.png" alt="">
+                    <img src="img/repacel.png" alt="">
                     <div class="overlay">
                         <h3>Diseño Creativo</h3>
-                        <p>Fotografía</p>
+                        <p>MANIDELA</p>
                     </div>
                 </div>
                 <div class="proyecto">
-                    <img src="img/fullstack.png" alt="">
+                    <img src="img/proye.png" alt="">
                     <div class="overlay">
                         <h3>Diseño Creativo</h3>
-                        <p>Fotografía</p>
+                        <p>MANIDELA</p>
                     </div>
                 </div>
                 <div class="proyecto">
-                    <img src="img/fullstack.png" alt="">
+                    <img src="img/codigoblan.png" alt="">
                     <div class="overlay">
                         <h3>Diseño Creativo</h3>
-                        <p>Fotografía</p>
+                        <p>MANIDELA</p>
                     </div>
                 </div>
                 <div class="proyecto">
-                    <img src="img/fullstack.png" alt="">
+                    <img src="img/codigoblan.png" alt="">
                     <div class="overlay">
                         <h3>Diseño Creativo</h3>
-                        <p>Fotografía</p>
+                        <p>MANIDELA</p>
                     </div>
                 </div>
             </div>
